# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  23 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: Added a 
  macos ranlib hack; dblink.mergeme by default resets each files mtime, which 
  makes static archives merged to the fs worthless (linker notes the files 
  mtime differs from an internal mtime, and bails).  This closes out bug 
  (#58848), and will be obsoleted when refcounts are used instead of mtime + 
  md5.

  21 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh: Expanded
  CONF_LIBDIR support, so it honors --prefix set values. (#61060)

  19 Aug 2004; Marius Mauch <genone@gentoo.org> bin/repoman: Added
  FEATURES and USE to the readonly variable check.

  17 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage_data.pym:
  Adding missing imports.

  17 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Minor 
  tweak to make repoman detect the repolevel correctly in overlays.
  (#60298).

*portage-2.0.51_pre20 (16 Aug 2004): Fixes and Public Readiness & GPG
  
  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fixed the
	imports and new modules so that the API remains constant.

  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_exec.py: Created
	for external operations and calls. Presently contains spawn. Mostly for
	prevention of circular imports.

  16 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_md5.py: using
	the spawn call from portage_exec.py to avoid the circular import.

  16 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Fixed a 
  traceback related to file.size and --fix, added compatability tweaks for
  xmllint.
